Remove dark mode issue

--- a/src/components/app/Wrapper.css
+++ b/src/components/app/Wrapper.css
@@ -2,7 +2,6 @@
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  color: black;
 }
 
 .wrapper-inner {
