--- a/src/components/content/SectionSelector.css
+++ b/src/components/content/SectionSelector.css
@@ -11,9 +11,9 @@
   border-style: solid;
   border-width: 0px;
   border-bottom-width: 0.1em;
-  border-color: var(--cyan5);
+  border-color: var(--primary);
 }
 
 .section-selector-inner:hover {
-  background-color: var(--cyan2);
+  background-color: var(--alt-primary);
 }
