--- a/src/components/content/TableOfContent.css
+++ b/src/components/content/TableOfContent.css
@@ -6,12 +6,12 @@
   height: 100vh;
   padding-top: 1em;
 
-  background-color: white;
+  background-color: var(--background-general);
 
   border-style: solid;
   border-width: 0px;
   border-right-width: 0.5em;
-  border-color: var(--cyan5);
+  border-color: var(--primary);
   
   visibility: hidden;
 
@@ -26,13 +26,6 @@
 .toc-button {
   display: inline-block;
   min-width: 150px;
-  color: black;
-  background-color: var(--cyan5);
-}
-
-.toc-button:hover {
-  background-color: var(--cyan2);
-  border-color: var(--cyan5);
 }
 
 .toc-title {
