--- a/src/components/content/TopBar.css
+++ b/src/components/content/TopBar.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0px;
   padding-top: 1em;
-  background-color: white;
+  background-color: var(--background-general);
 
   text-align: center;
 }
@@ -17,16 +17,4 @@
 .bar-button {
   display: inline-block;
   min-width: 150px;
-  color: black;
-  background-color: var(--cyan5);
-}
-
-.bar-button:hover {
-  background-color: var(--cyan2);
-  border-color: var(--cyan5);
-}
-
-.solid-divider {
-  border: #eeeeee;
-  border-top: 0.1em solid #bbbbbb;
 }
